# project_to_markdown

./: CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  make_md.py  project_to_markdown.py  pyproject.toml  requirements-dev.txt  requirements.test.txt
.github/workflows/: ci.yml  codeql.yml  lint.yml
scripts/: make_md.sh
tests/: test_make_md.py  test_project_to_markdown.py
